# ml-food-waste-estimation

./: .gitignore  CLAUDE.md  README.md  SPEC.md  lint.py  pyproject.toml  requirements.txt
assets/readme/: make_architecture.py  make_pipeline_overview.py  make_sample_pipeline.py
notebooks/: EDA_LeFoodSet_Leftovers.ipynb  LeFoodSet_Leftovers_EDA.ipynb  LeFoodSet_Leftovers_Inference.ipynb  LeFoodSet_Leftovers_Training.ipynb  inference.ipynb  training.ipynb
src/: dataset.py  inference.py  model.py  segmentation.py  train.py  utils.py
