[project]
name = "food-waste-estimation"
version = "0.1.0"
description = "Dual-stream CNN for automated food waste estimation from before/after meal image pairs"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]
