[project]
name = "food-waste-estimation"
version = "0.1.0"
description = "Dual-stream CNN for automated food waste estimation from before/after meal image pairs"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "loguru>=0.7.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.65.0",
    "segment-anything>=1.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
